@@ -16,6 +16,7 @@
 
 package org.spockframework.compiler;
 
+import org.codehaus.groovy.runtime.wrappers.PojoWrapper;
 import org.spockframework.runtime.*;
 import org.spockframework.runtime.model.*;
 import org.spockframework.util.Identifiers;
@@ -79,4 +80,5 @@ public class AstNodeCache {
 
   // external types
   public final ClassNode Throwable = ClassHelper.makeWithoutCaching(Throwable.class);
+  public final ClassNode PojoWrapper = ClassHelper.makeWithoutCaching(PojoWrapper.class);
 }
