@@ -17,6 +17,16 @@ With the new behavior, you can have a `Mock` or `Spy` return the same value as a
 subscriber.receive(_) >> _
 ----
 
+=== Misc
+
+- `constructorArgs` now properly transport type cast information to the constructor selection,
+  for example to disambiguate multiple candidate constructors
++
+[source,groovy]
+----
+Spy(constructorArgs: [null as String])
+----
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
